# hackathon

./: .flake8  .gitignore  README.md  bot.py  pyproject.toml
cta/: main.py
cta/database/: client.py  models.py
cta/dialogs/: register.py
cta/dialogs/auth/: dialogs.py  states.py  windows.py
cta/dialogs/main/: dialogs.py  states.py  windows.py
cta/dialogs/user/: register.py
cta/dialogs/user/deck/: dialogs.py  states.py  windows.py
cta/dialogs/user/menu/: dialogs.py  states.py  windows.py
cta/handlers/: auth.py
cta/routers/: auth.py  register.py
